--- a/metadata.yaml
+++ b/metadata.yaml
@@ -28,5 +28,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'QL'
 - !lcsh 'Butterflies -- North America'
+- GITenberg
 title: Butterflies Worth Knowing
 url: http://www.gutenberg.org/ebooks/37009
